--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,28 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.10.8
+  sdk: ^3.7.2
 
 dependencies:
+  dio: ^5.9.1
   flutter:
     sdk: flutter
+  flutter_chat_types: ^3.6.2
+  flutter_chat_ui: ^1.6.15
+  flutter_riverpod: ^2.6.1
+  go_router: ^17.1.0
+  image_picker: ^1.2.1
+  riverpod_annotation: ^2.6.1
+  uuid: ^4.5.2
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
+  custom_lint: ^0.7.5
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
