--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_chat_types: ^3.6.2
   flutter_chat_ui: ^1.6.15
+  flutter_dotenv: ^6.0.0
   flutter_riverpod: ^2.6.1
   go_router: ^17.1.0
   image_picker: ^1.2.1
@@ -20,12 +21,14 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.15
-  riverpod_generator: ^2.6.5
-  riverpod_lint: ^2.6.5
   custom_lint: ^0.7.5
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
